# TLOYT

./: package-lock.json  package.json  tailwind.config.js
src/: App.tsx  context.tsx  home.tsx  tauri_commands.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  cli.rs  constants.rs  error.rs  main.rs  tauri_commands.rs  test_core.rs  test_manager.rs  test_trial.rs
src-tauri/src/test_manager/: ab_thurstone.rs  mos.rs  thurstone.rs
src-tauri/src/test_trial/: ab_thurstone.rs  mos.rs  thurstone.rs
src/calc_aggregation/: mos.ts  thurstone.ts
src/component/: aggregation.tsx  aggretate.tsx  answer.tsx  button.tsx  context.tsx  home.tsx  list.tsx  markdown.tsx  setting.tsx  setup_form.tsx  tauri_commands.ts  test_component.tsx  trial.tsx  utils.ts
src/component/answer/: answer.tsx  mos.tsx  thurstone.tsx
src/component/calc_aggregation/: mos.ts  thurstone.ts
